deploy/kube-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flatland-docs
  namespace: flatland
  labels:
    app: flatland-docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flatland-docs
  template:
    metadata:
      labels:
        app: flatland-docs
    spec:
      nodeSelector:
        node-group: service-nodes
      tolerations:
        - key: node-group
          value: service-nodes
      imagePullSecrets:
      - name: regcred
      containers:
      - name: flatland-docs
        image: aicrowd/flatland-docs:$IMAGE_TAG
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flatland-docs
  namespace: flatland
  labels:
    app: flatland-docs
spec:
  selector:
    app: flatland-docs
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flatland-docs
  namespace: flatland
  labels:
    app: flatland-docs
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - flatland-docs.aws-internal.k8s.aicrowd.com
        - flatland.aicrowd.com
      secretName: flatland-docs-tls-secret
    - hosts:
        - flatland-docs.internal.k8s.aicrowd.com
      secretName: flatland-docs-legacy-tls-secret
  rules:
  - host: flatland-docs.aws-internal.k8s.aicrowd.com
    http:
      paths:
      - path: /
        backend:
          serviceName: flatland-docs
          servicePort: 80
  - host: flatland.aicrowd.com
    http:
      paths:
        - path: /
          backend:
            serviceName: flatland-docs
            servicePort: 80
  - host: flatland-docs.internal.k8s.aicrowd.com
    http:
      paths:
        - path: /
          backend:
            serviceName: flatland-docs
            servicePort: 80
